jquery/css ini/proofs

--- a/src/main/resources/templates/index_test.html
+++ b/src/main/resources/templates/index_test.html
@@ -1,18 +1,43 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>peAk</title>
-</head>
-<body>
-    <header>
-        <div th:replace="common :: nav"></div>
-        <h1>Test Home</h1>
-    </header>
-    <main>
 
-    </main>
-    <footer>
+    <head>
+        <title>peAk</title>
+        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <!--<link rel="stylesheet" href="../static/views.css">-->
+        <link href="/style.css" rel="stylesheet" />
+        <script src="/views.js" type='text/javascript'></script>
 
-    </footer>
+    </head>
+
+    <body>
+        body
+        <header>
+            <div id="test" th:replace="common :: nav"></div>
+
+            <h1>Test Home</h1>
+        </header>
+    </body>
+
+
+<!--<head>-->
+    <!--<title>peak</title>-->
+<!--</head>-->
+<!--<body>-->
+
+    <!--<header>-->
+
+        <!--<div th:replace="common :: nav"></div>-->
+        <!--<h1>Test Home</h1>-->
+    <!--</header>-->
+    <!--<main>-->
+
+    <!--</main>-->
+    <!--<footer>-->
+
+    <!--</footer>-->
 </body>
+
+    <!--<script>alert("here");</script>-->
+
 </html>
