--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -4,7 +4,7 @@
 </head>
 <body>
     <nav th:fragment="nav">
-        <div><a href="/">Home</a></div>
+        <div><a href="/">home</a></div>
         <div><a href="/login">Login</a> </div>
         <div><a href="/sign-up">Sign-Up</a></div>
         <div><a href="/myProfile">Profile</a></div>
