--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
+
+<head th:fragment="head">
+
+    <title>peAk</title>
+
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/solid.css"
+          integrity="sha384-+0VIRx+yz1WBcCTXBkVQYIBVNEFH1eP6Zknm16roZCyeNg2maWEpk/l/KsyFKs7G" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/fontawesome.css"
+          integrity="sha384-jLuaxTTBR42U2qJ/pm4JRouHkEDHkVqH0T1nyQXn1mZ7Snycpf6Rl25VBNthU4z0" crossorigin="anonymous">
+
+    <link href="/style.css" rel="stylesheet" />
+
+    <script src="/views.js" type='text/javascript'></script>
+
 </head>
-<body>
+
+
     <nav th:fragment="nav">
         <div><a href="/">home</a></div>
         <div><a href="/login">Login</a> </div>
         <div><a href="/sign-up">Sign-Up</a></div>
         <div><a href="/myProfile">Profile</a></div>
     </nav>
-</body>
+
+
 </html>
