--- a/src/main/resources/templates/index_test.html
+++ b/src/main/resources/templates/index_test.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-    <head>
-        <title>peAk</title>
-        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <!--<link rel="stylesheet" href="../static/views.css">-->
-        <link href="/style.css" rel="stylesheet" />
-        <script src="/views.js" type='text/javascript'></script>
-
-    </head>
+    <head th:replace="common :: head"></head>
 
     <body>
         body
+
+        <i class="fas fa-hamsa"></i>
+
         <header>
             <div id="test" th:replace="common :: nav"></div>
 
