--- a/src/main/resources/templates/index_test.html
+++ b/src/main/resources/templates/index_test.html
@@ -4,15 +4,17 @@
     <head th:replace="common :: head"></head>
 
     <body>
-        body
 
-        <i class="fas fa-hamsa"></i>
+        <header th:replace="common :: header"></header>
 
-        <header>
-            <div id="test" th:replace="common :: nav"></div>
 
-            <h1>Test Home</h1>
-        </header>
+
+        <!--<header>-->
+            <!--<div id="test" th:replace="common :: nav"></div>-->
+
+            <!--<h1>Test Home</h1>-->
+        <!--</header>-->
+
     </body>
 
 
