--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -1,30 +1,56 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
+<!--...-->
+
 <head th:fragment="head">
+
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
     <title>peAk</title>
 
+    <!--JQ-->
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
+    <!--Font Awesome-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/solid.css"
           integrity="sha384-+0VIRx+yz1WBcCTXBkVQYIBVNEFH1eP6Zknm16roZCyeNg2maWEpk/l/KsyFKs7G" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/fontawesome.css"
           integrity="sha384-jLuaxTTBR42U2qJ/pm4JRouHkEDHkVqH0T1nyQXn1mZ7Snycpf6Rl25VBNthU4z0" crossorigin="anonymous">
 
-    <link href="/style.css" rel="stylesheet" />
+    <!--static css-->
+    <link href="/css/reset.css" rel="stylesheet" />
+    <link href="/css/style.css" rel="stylesheet" />
 
-    <script src="/views.js" type='text/javascript'></script>
+    <!--G fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Rubik|Viga" rel="stylesheet">
+
+    <!--views script is wrapped in jquery.document.ready(<code>) to protect from executions before page load-->
+    <script src="/js/views.js" type='text/javascript'></script>
 
 </head>
 
+<!--...-->
 
-    <nav th:fragment="nav">
-        <div><a href="/">home</a></div>
-        <div><a href="/login">Login</a> </div>
-        <div><a href="/sign-up">Sign-Up</a></div>
-        <div><a href="/myProfile">Profile</a></div>
-    </nav>
+<!--header should have a login/signup on the top right, logo on the left.-->
+<!--leave about, legal, contact, etc for footer-->
 
+<header th:fragment="header">
+
+    <img id="head_logo" src="/img/peaklogo500w.png" alt="logo">
+    <!--<i class="fas fa-hamsa"></i>-->
+
+</header>
+
+<!--...-->
+
+<nav th:fragment="nav">
+    <div><a href="/">home</a></div>
+    <div><a href="/login">Login</a> </div>
+    <div><a href="/sign-up">Sign-Up</a></div>
+    <div><a href="/myProfile">Profile</a></div>
+</nav>
+
+<!--...-->
 
 </html>
