--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -36,9 +36,10 @@
 <!--leave about, legal, contact, etc for footer-->
 
 <header th:fragment="header">
-
-    <img id="head_logo" src="/img/peaklogo500w.png" alt="logo">
+    <div id="logo_frame"></div>
+    <!--<img id="head_logo" src="/img/peaklogo500w.png" alt="logo">-->
     <!--<i class="fas fa-hamsa"></i>-->
+    <h1>PEAK</h1>
 
 </header>
 
