--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -38,8 +38,8 @@
 <header th:fragment="header">
     <div id="logo_frame"></div>
     <!--<img id="head_logo" src="/img/peaklogo500w.png" alt="logo">-->
-    <!--<i class="fas fa-hamsa"></i>-->
-    <h1>PEAK</h1>
+
+    <h1>PEAK</h1>mountain matchmaking
 
 </header>
 
@@ -53,5 +53,6 @@
 </nav>
 
 <!--...-->
+
 
 </html>
