--- a/src/main/resources/templates/index_test.html
+++ b/src/main/resources/templates/index_test.html
@@ -3,9 +3,12 @@
 
     <head th:replace="common :: head"></head>
 
+
+    <header th:replace="common :: header"></header>
+
     <body>
 
-        <header th:replace="common :: header"></header>
+
 
 
 
@@ -18,22 +21,9 @@
     </body>
 
 
-<!--<head>-->
-    <!--<title>peak</title>-->
-<!--</head>-->
-<!--<body>-->
+        <i class="fas fa-hamsa"></i>
+        <div th:replace="common :: nav"></div>
 
-    <!--<header>-->
-
-        <!--<div th:replace="common :: nav"></div>-->
-        <!--<h1>Test Home</h1>-->
-    <!--</header>-->
-    <!--<main>-->
-
-    <!--</main>-->
-    <!--<footer>-->
-
-    <!--</footer>-->
 </body>
 
     <!--<script>alert("here");</script>-->
