--- a/src/main/resources/templates/sign_up.html
+++ b/src/main/resources/templates/sign_up.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-</head>
+
+<head th:replace="c_head :: head"></head>
+
 <body>
-    <header>
-        <div th:replace="common :: nav"></div>
-        <h1>Sign-up Test</h1>
-    </header>
+
+    <header th:replace="c_header :: header"></header>
+
     <main>
         <form action="/newAppUser" method="post">
             <label for="username">Username:</label>
@@ -27,8 +27,10 @@
             <input type="submit" name="Sign-Up">
         </form>
     </main>
+
     <footer>
 
     </footer>
+
 </body>
 </html>
