pre background-media display rework

--- a/src/main/resources/templates/c_header.html
+++ b/src/main/resources/templates/c_header.html
@@ -2,12 +2,18 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <header th:fragment="header">
+
+    <div id="">
+
+    </div>
     <a href="/"><div id="logo_frame"></div></a>
     <!--<img id="head_logo" src="/img/peaklogo500w.png" alt="logo">-->
 
     <a href="/"><h1>PEAK</h1></a>
 
     <nav th:replace="c_nav :: nav"></nav>
+
+    <button>H</button>
 
 </header>
 
