--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -7,6 +7,7 @@ html{
 }
 
 body {
+    box-sizing: border-box;
     font-size: .9em;
     /*margin-left: auto;
     margin-right: auto;*/
@@ -61,7 +62,16 @@ footer {
 
     header {
         height: 3vh;
-        background-color: black;
+        background-color: #1a4871;
+        color: white;
+    }
+
+    nav > div > a {
+        color: white;
+        text-decoration: none;
+    }
+
+    h1{
         color: white;
     }
 
@@ -70,16 +80,17 @@ footer {
     }
 
     h1{
-        font-size: 3vh;
+        font-size: 2vh;
     }
 
     #logo_frame {
-        height: 2.5vh;
-        width: 2.5vh;
+        height: 3vh;
+        width: 3vh;
         display: inline-block;
         background-image: url("/img/peaklogo500w.png");
         background-size: 2.5vh 2.5vh;
         background-repeat: no-repeat;
+        background-position: center;
     }
 
 
@@ -99,26 +110,43 @@ footer {
         color: black;
     }
 
+    nav > div > a {
+        color: black;
+        text-decoration: none;
+    }
+
+    h1{
+        color: black;
+        font-size: 3.5vh;
+    }
+
     body{
         background-image: none;
-        background-color: black;
+        background-color: #1a4871;
         position: absolute;
         top: 5vh;
         color: white;
     }
 
-    h1{
-        font-size: 5vh;
+    button {
+      background-color: #1a4871;
+      border: none;
+      color: white;
+      padding: 5px 10px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: .7em;
     }
 
 
     #logo_frame {
-        height: 4.5vh;
-        width: 4.5vh;
+        height: 5vh;
+        width: 5vh;
         display: inline-block;
         background-image: url("/img/peaklogo500b.png");
         background-size: 4.5vh 4.5vh;
         background-repeat: no-repeat;
-
-      }
+        background-position: center;
+    }
 }
