--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,21 +5,23 @@
 
     <body>
 
-    <header th:replace="c_header :: header"></header>
+        <header th:replace="c_header :: header"></header>
 
-        <section class="main">
 
-            <div id="mountain_select"></div>
-            <div id="mountain_detail"></div>
-            <div id="team_select"></div>
 
-        </section>
+        <!--<div th:replace="c_locations :: locations"></div>-->
 
-        <section class="main"></section>
+        <!--<div id="mountain_detail">-->
+                <!--mountain detail. this part needs to-->
+                <!--draw based on what is clicked in the-->
+                <!--locations nav to the left, id vertical_locations-->
+            <!--</div>-->
+
+        <!--<div th:replace="c_teams :: teams"></div>-->
+
+
 
     </body>
 
-
-</body>
 
 </html>
