--- a/src/main/resources/templates/c_locations.html
+++ b/src/main/resources/templates/c_locations.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<div id="vertical_locations" th:fragment="locations">
+<div class="transparent_body" id="vertical_locations" th:fragment="locations">
 
     <span>RESORTS ELEMENT</span>
     <!--<ul>-->
