--- a/src/main/resources/templates/c_teams.html
+++ b/src/main/resources/templates/c_teams.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<div id="teams" th:fragment="teams">
+<div class="transparent_body" id="teams" th:fragment="teams">
 
     TEAM</br>
     TEAM</br>
