--- a/src/main/resources/templates/c_header.html
+++ b/src/main/resources/templates/c_header.html
@@ -6,7 +6,7 @@
     <div id="">
 
     </div>
-    <a href="/"><div id="logo_frame"></div></a>
+    <div id="logo_frame"></div>
     <!--<img id="head_logo" src="/img/peaklogo500w.png" alt="logo">-->
 
     <a href="/"><h1>PEAK</h1></a>
