small changes to controller and testHTML

--- a/src/main/resources/templates/myProfile_test.html
+++ b/src/main/resources/templates/myProfile_test.html
@@ -9,7 +9,10 @@
         <h1>My Profile Test</h1>
     </header>
     <main>
-
+        <form action="/storeImages" method="post">
+            <input type="file" name="pic" accept="image/*">
+            <input type="submit">
+        </form>
     </main>
     <footer>
 
