--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,9 +12,7 @@
         <div th:replace="c_locations :: locations"></div>
 
         <div class="transparent_body" id="mountain_detail">
-                mountain detail. this part needs to
-                draw based on what is clicked in the
-                locations nav to the left, id vertical_locations
+            <div class="ots-widget"><iframe id="o76973" width="300" height="314" border="0" frameborder="0" scrolling="no" src="https://www.onthesnow.com/widget/snow?resort=124&color=b"></iframe><p><a href="https://www.onthesnow.com/washington/crystal-mountain-wa/skireport.html" target="_blank">Powered by OnTheSnow.com</a></p></div>
             </div>
 
         <div th:replace="c_teams :: teams"></div>
