--- a/src/main/resources/templates/c_teams.html
+++ b/src/main/resources/templates/c_teams.html
@@ -3,15 +3,17 @@
 
 <div class="transparent_body" id="teams" th:fragment="teams">
 
-    TEAM</br>
-    TEAM</br>
-    TEAM</br>
-    groups you can join.
-    a card per group with minimal essential info,
-    including ENOUGH so that the person can be selective on
-    a basic level before looking at a groups page
-    to join.</br>
-    It should expand to the size of the deck
+    <div class="team_card" th:attr="data-id=${team.id}" th:each="team : ${locations[2].teams}">
+        <span th:text="${team.difficulty}"></span>
+        <span th:text="${team}"></span>
+        <span th:text="${team.users.size()} + '/' + ${team.capacity}"></span>
+        <!--<span th:text="${team.description}">beer. blackjack. hookers</span>-->
+        <span>beer. blackjack. hookers</span>
+
+        <!--diff-img | group name | how full-->
+        <!--short description 140 characters-->
+
+    </div>
 
 </div>
 
