added descriptions to dummy data

--- a/src/main/resources/templates/c_teams.html
+++ b/src/main/resources/templates/c_teams.html
@@ -7,8 +7,8 @@
         <span th:text="${team.difficulty}"></span>
         <span th:text="${team}"></span>
         <span th:text="${team.users.size()} + '/' + ${team.capacity}"></span>
-        <!--<span th:text="${team.description}">beer. blackjack. hookers</span>-->
-        <span>beer. blackjack. hookers</span>
+        <span th:text="${team.description}">beer. blackjack. hookers</span>
+        <!--<span>beer. blackjack. hookers</span>-->
 
         <!--diff-img | group name | how full-->
         <!--short description 140 characters-->
