--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,6 +20,8 @@
                 <p><a th:href="${locations[0].otsUrl}" target="_blank">Powered by OnTheSnow.com</a></p>
             </div>
 
+            <div id="map"></div>
+
         </div>
 
         <div th:replace="c_teams :: teams"></div>
@@ -38,5 +40,8 @@
     </body>
 
     <script src="/js/views.js" type='text/javascript'></script>
+    <script src="/js/maps.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDxgddLplSZhq5H2eEIxCPdacE-VmAWHk0&callback=initMap"
+            async defer></script>
 
 </html>
