--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -20,21 +20,7 @@
     </head>
     <body>
     <div id="map"></div>
-    <script>
-        var map;
-        function initMap() {
-        var myLatlng = new google.maps.LatLng(-34.397, 150.644);
-
-        var mapOptions = {
-          zoom: 8,
-          center: myLatlng,
-          mapTypeId: 'terrain'
-        };
-
-        map = new google.maps.Map(document.getElementById('map'),
-         mapOptions);
-        }
-    </script>
+    <script src="/js/maps.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDxgddLplSZhq5H2eEIxCPdacE-VmAWHk0&callback=initMap"
             async defer></script>
 </body>
