--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -20,7 +20,26 @@
     </head>
     <body>
     <div id="map"></div>
-    <script src="/js/maps.js"></script>
+    <script>
+        var map;
+        function initMap() {
+        var myLatlng = new google.maps.LatLng(-34.397, 150.644);
+        //var myLatlng = new google.maps.LatLng(lat, long);
+
+
+        var mapOptions = {
+        zoom: 8,
+        center: myLatlng,
+        mapTypeId: 'terrain'
+        };
+
+        map = new google.maps.Map(document.getElementById('map'),
+        mapOptions);
+        }
+
+
+    </script>
+    <script src="/js/views.js" type='text/javascript'></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDxgddLplSZhq5H2eEIxCPdacE-VmAWHk0&callback=initMap"
             async defer></script>
 </body>
