map rendering, map rerendering hardcode

--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -21,6 +21,7 @@
     <body>
     <div id="map"></div>
     <script>
+        console.log("in index script")
         var map;
         function initMap() {
         var myLatlng = new google.maps.LatLng(-34.397, 150.644);
