--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -71,9 +71,9 @@ footer {
 }
 
 #map {
-    float: right;
-    height: 10%;
-    z-index: 0;
+    width: 100%;
+    height: 400px;
+    background-color: grey;
 }
 
 @media screen and (orientation:portrait) {
@@ -112,13 +112,6 @@ footer {
 
     }
 
-    #map {
-        float: right;
-        height: 10%;
-        z-index: 0;
-    }
-
-
 }
 
 @media screen and (orientation: landscape) {
@@ -153,9 +146,4 @@ footer {
 
     }
 
-    #map {
-        float: right;
-        height: 10%;
-        z-index: 0;
-    }
 }
