--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
                 <p><a th:href="${locations[0].otsUrl}" target="_blank">Powered by OnTheSnow.com</a></p>
             </div>
 
-            <div id="map"></div>
+
 
         </div>
 
@@ -37,7 +37,13 @@
             <i class="fas fa-bars"></i>
         </div>
 
+        <section>
+            <div id="map"></div>
+        </section>
+
     </body>
+
+
 
     <script src="/js/views.js" type='text/javascript'></script>
     <script src="/js/maps.js"></script>
