--- a/src/main/resources/templates/sign_up.html
+++ b/src/main/resources/templates/sign_up.html
@@ -8,7 +8,8 @@
     <header th:replace="c_header :: header"></header>
 
     <main>
-        <form action="/newAppUser" method="post">
+        <form th:if="${teamID == null}" action="/newAppUser/team/0" method="post">
+        <form th:unless="${teamID != null}" th:action="${'/newAppUser/team/' + teamID}" method="post">
             <label for="username">Username:</label>
             <input type="text" name="username" id="username">
 
