--- a/src/main/resources/templates/c_locations_m.html
+++ b/src/main/resources/templates/c_locations_m.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<div class="shades" id="vertical_locations" th:fragment="locations">
+<div class="shades" id="vertical_locations_m" th:fragment="locations">
 
     <h1>RESORTS</h1>
 
