--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -14,7 +14,7 @@ html{
 }
 
 div, section {
-    border: thin red solid;
+    /* border: thin red solid; */
 }
 
 body {
@@ -27,15 +27,6 @@ body {
     font-size: .9em;
     color: white;
     }
-
-.shades{
-
-    background:rgba(0, 0, 0, 0.4);
-    padding: 5px 5px;
-    border-radius: 5px;
-    margin-left: 5px;
-    margin-top: 5px;
-}
 
 header {
     width: 100vw;
@@ -81,6 +72,12 @@ i {
     font-size: 2.5em;
 }
 
+#nav_icon {
+    background: transparent;
+    color: white;
+    font-size: 2em;
+}
+
 footer {
     height: 3vh;
 }
@@ -88,6 +85,10 @@ footer {
 #map {
     background-color: grey;
     display: inline-block;
+}
+
+#mobile_nav_spacer{
+    display: none;
 }
 
 
@@ -110,9 +111,85 @@ footer {
         height: 3vh;
     }
 
-    #vertical_locations{
-        display: none;
+
+    .shades{
+        background:rgba(0, 0, 0, 1);
+        padding: 5px 3px;
     }
+
+    #mobile_nav_spacer{
+        height: 50px;
+        display:inline-block;
+    }
+
+    #mobile_nav{
+        z-index: 11;
+        position: fixed;
+        top: 3vh;
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        margin-top: 5px;
+        height: 50px;
+        align-content: center;
+        align-items: center;
+    }
+
+    #vertical_locations_m{
+    display: none;
+        position: fixed;
+        top: calc(3vh + 55px);
+        z-index: 10;
+        width: 100vw;
+        background:rgba(0, 0, 0, 1);
+    }
+
+    #mountain_detail{
+        border-radius: 0px 5px 5px 0px;
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+
+    #vertical_locations{
+        display:none;
+    }
+
+    .resort_button_div{
+        margin: 20px 0px;
+        font-family: 'Viga', sans-serif;
+    }
+
+    #mobile_nav_button_left{
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        width: 50px;
+        height: 50px;
+        margin: 0px 5px 0px 0px;
+        border-radius: 0px 15px 3px 0px;
+        background:rgba(0, 0, 0, 1);
+    }
+
+    #mobile_nav_button_right{
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        width: 40px;
+        height: 40px;
+        margin: 0px 5px 0px 0px;
+        border-radius: 25px;
+        background-color: white;
+    }
+
+    .team_card{
+        background:rgba(0, 0, 0, 0.5);
+        padding: 5px 5px;
+        border-radius: 5px;
+        margin: 5px 3px 0px;
+    }
+
 
     h1{
         font-size: 2vh;
@@ -166,18 +243,51 @@ footer {
         height: 5vh;
     }
 
+
+.shades{
+
+    background:rgba(0, 0, 0, 0.7);
+    padding: 5px 5px;
+    border-radius: 5px;
+    margin-left: 5px;
+    margin-top: 5px;
+}
+
+#mobile_nav{
+    display: none;
+}
+
+.team_card{
+    background:rgba(0, 0, 0, 0.4);
+        padding: 5px 5px;
+        border-radius: 5px;
+        margin-left: 5px;
+        margin-top: 5px;
+}
+
     #vertical_locations{
         display:inline-block;
-        width: calc(20% - 10px);
-        height: 366px;
-        float:left;
+        width: 150px;
+        height: 365px;
+        float: left;
+        font-family: 'Viga', sans-serif;
+        overflow: auto;
+    }
+
+    .resort_button_div{
+        margin: 10px 0px;
+    }
+
+    #vertical_locations_m{
+        display: none;
     }
 
     #mountain_detail{
         display:inline-block;
-        width: calc(80% - 10px);
-        /* height: calc(95vh - 10px); */
+        width: calc(100% - 15px - 150px);
+        height: 365px;
         float:left;
+
 
     }
 
@@ -203,20 +313,21 @@ footer {
     }
 
     #report_container{
-        width: 100%;
-        position: relative;
-        display: inline-block;
-    }
-
-    #report_container{
         width: 300px;
         position: relative;
+        display: inline-block;
     }
 
     #add_tag{
         position: absolute;
         bottom: 10px;
         left:10px;
+    }
+
+    #groups_readout{
+        position: absolute;
+        top: 370px;
+        left: calc(150px + 5px);
     }
 
 }
