--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -78,6 +78,12 @@ i {
     font-size: 2em;
 }
 
+#nav_icon_user {
+    background: transparent;
+    color: white;
+    font-size: 2em;
+}
+
 footer {
     height: 3vh;
 }
@@ -109,6 +115,7 @@ footer {
 
     header {
         height: 3vh;
+        background:rgba(0, 0, 0, .5);
     }
 
 
@@ -126,7 +133,8 @@ footer {
         z-index: 11;
         position: fixed;
         top: 3vh;
-        width: 100%;
+        width: 60px;
+        left: 0px;
         display: flex;
         justify-content: space-between;
         margin-top: 5px;
@@ -136,11 +144,11 @@ footer {
     }
 
     #vertical_locations_m{
-    display: none;
+        display: none;
         position: fixed;
         top: calc(3vh + 55px);
         z-index: 10;
-        width: 100vw;
+        width: 100%;
         background:rgba(0, 0, 0, 1);
     }
 
@@ -172,15 +180,32 @@ footer {
     }
 
     #mobile_nav_button_right{
+
+        position: absolute;
+
+        top: 5px;
+        left: 60px;
+
         display: flex;
         justify-content: center;
         align-content: center;
         align-items: center;
-        width: 40px;
-        height: 40px;
-        margin: 0px 5px 0px 0px;
-        border-radius: 25px;
-        background-color: white;
+
+        width: 50px;
+        height: 50px;
+        margin: 0px 0px 0px 0px;
+        border-radius: 15px 15px 0px 0px;
+        background-color: black;
+    }
+
+    #nav_m{
+        display:none;
+        position: absolute;
+        top: 55px;
+        right: 0;
+        z-index: 10;
+        width: 100%;
+        background:rgba(0, 0, 0, 1);
     }
 
     .team_card{
@@ -244,21 +269,21 @@ footer {
     }
 
 
-.shades{
+    .shades{
 
-    background:rgba(0, 0, 0, 0.7);
-    padding: 5px 5px;
-    border-radius: 5px;
-    margin-left: 5px;
-    margin-top: 5px;
-}
+        background:rgba(0, 0, 0, 0.7);
+        padding: 5px 5px;
+        border-radius: 5px;
+        margin-left: 5px;
+        margin-top: 5px;
+    }
 
-#mobile_nav{
-    display: none;
-}
+    #mobile_nav{
+        display: none;
+    }
 
-.team_card{
-    background:rgba(0, 0, 0, 0.4);
+    .team_card{
+        background:rgba(0, 0, 0, 0.4);
         padding: 5px 5px;
         border-radius: 5px;
         margin-left: 5px;
@@ -301,6 +326,14 @@ footer {
         width: 5vh;
         background-size: 4.5vh 4.5vh;
 
+    }
+
+    #nav_icon {
+        display:none;
+    }
+
+    #nav_icon_user {
+        display:none;
     }
 
     #resort_title{
