nav ready to wire

--- a/src/main/resources/templates/c_nav_m.html
+++ b/src/main/resources/templates/c_nav_m.html
@@ -2,9 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <nav id="nav_m" th:fragment="nav_m">
-    <div><a href="/login">Login</a></div>
-    <div><a href="/signup">Sign-Up</a></div>
-    <div><a href="/myProfile">Profile</a></div>
+    <div class="shades"><a href="/login">Login</a></div>
+    <div class="shades"><a href="/signup">Sign-Up</a></div>
+    <div class="shades"><a href="/myProfile">Profile</a></div>
 </nav>
 
 </html>
