quick code cleanup/fixing html

--- a/src/main/resources/templates/team.html
+++ b/src/main/resources/templates/team.html
@@ -7,9 +7,7 @@
 
         <header th:replace="c_header :: header"></header>
 
-        <header th:replace="c_vertnav :: v_nav"></header>
-
-        <div th:replace="c_locations :: locations"></div>
+        <header th:replace="c_nav_m :: nav_m"></header>
 
         <!--Basic group information-->
         <div>
