created basic myProfile page

--- a/src/main/resources/templates/team.html
+++ b/src/main/resources/templates/team.html
@@ -7,7 +7,7 @@
 
         <header th:replace="c_header :: header"></header>
 
-        <header th:replace="c_vertnav :: v_nav"></header>
+        <header th:replace="c_nav :: nav"></header>
 
         <div th:replace="c_locations :: locations"></div>
 
