--- a/src/main/resources/templates/my_profile.html
+++ b/src/main/resources/templates/my_profile.html
@@ -8,7 +8,23 @@
     <header th:replace="c_header :: header"></header>
 
     <main>
-        PROFILE
+        <h1 th:text="${'PROFILE: ' + user.username}"></h1>
+
+        <h2 th:text="${'NAME: ' + user.getFirstName() + ' ' + user.getLastName()}"></h2>
+        <h2 th:text="${'BIO: ' + user.getBio()}"></h2>
+
+        <h2>TEAMS:</h2>
+
+        <div class="team_card" th:attr="data-id=${team.id}" th:each="team : ${user.teams}">
+            <span th:text="${team.difficulty}"></span>
+            <span th:text="${team}"></span>
+            <span th:text="${team.users.size()} + '/' + ${team.capacity}"></span>
+
+            <span th:text="${team.description}"></span>
+            <a th:href="'/teams/' + ${team.id}">View</a>
+
+        </div>
+
     </main>
 
     <footer>
