--- a/src/main/resources/templates/my_profile.html
+++ b/src/main/resources/templates/my_profile.html
@@ -3,6 +3,8 @@
 
 <head th:replace="c_head :: head"></head>
 
+
+
 <body>
 
     <header th:replace="c_header :: header"></header>
@@ -22,8 +24,15 @@
 
             <span th:text="${team.description}"></span>
             <a th:href="'/teams/' + ${team.id}">View</a>
-
         </div>
+
+        <button class="updateButton">Update Profile Bio: </button>
+
+        <form action="/updateProfile" method="post" class="updateForm">
+            <label for="bio">Bio:</label>
+            <input type="text" name="bioUpdate" id="bio">
+            <input type="submit" name="Update">
+        </form>
 
     </main>
 
@@ -32,5 +41,8 @@
     </footer>
 
 </body>
+
+<script src="/js/updateForm.js" type='text/javascript'></script>
+
 
 </html>
