--- a/src/main/resources/templates/c_head.html
+++ b/src/main/resources/templates/c_head.html
@@ -20,8 +20,10 @@
     <link href="/css/reset.css" rel="stylesheet" />
     <link href="/css/style.css" rel="stylesheet" />
 
+
     <!--G fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Rubik|Viga" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Staatliches" rel="stylesheet">
+
 
 </head>
 
