--- a/src/main/resources/templates/c_header.html
+++ b/src/main/resources/templates/c_header.html
@@ -6,10 +6,11 @@
     <div id="">
 
     </div>
-    <div id="logo_frame"></div>
-    <!--<img id="head_logo" src="/img/peaklogo500w.png" alt="logo">-->
 
-    <a href="/"><h1>PEAK</h1></a>
+    <!--<img id="head_logo" src="/img/peaklogo500w.png" alt="logo">-->
+    <a href="/"><div id="logo_frame"></div></a>
+
+    <h1>PEAK</h1>
 
     <nav th:replace="c_nav :: nav"></nav>
 
