--- a/src/main/resources/templates/c_nav.html
+++ b/src/main/resources/templates/c_nav.html
@@ -3,9 +3,9 @@
 
 <nav th:fragment="nav">
 
-        <div><a href="/login">Login</a></div>
-        <div><a href="/signup">Sign-Up</a></div>
-        <div><a href="/myProfile">Profile</a></div>
+        <div><a href="/login"><span>Login</span></a></div>
+        <div><a href="/signup"><span>Sign-Up</span></a></div>
+        <div><a href="/myProfile"><span>Profile</span></a></div>
 
 </nav>
 
