--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -10,11 +10,13 @@ html{
 }
 
 * {
-    font-family: 'Rubik', sans-serif;
+
 }
 
 div, section {
     /* border: thin red solid; */
+    font-family: 'Open Sans', sans-serif;
+
 }
 
 body {
@@ -48,7 +50,7 @@ header {
     }
 
 h1 {
-    font-family: 'Viga', sans-serif;
+    font-family: 'Staatliches', cursive;
     display: inline-block;
     color: white;
 }
@@ -76,6 +78,7 @@ i {
     background: transparent;
     color: white;
     font-size: 2em;
+
 }
 
 #nav_icon_user {
@@ -104,9 +107,13 @@ footer {
 
     }
 
+    html{
+
+    }
+
     body{
         position: absolute;
-        top: 3vh;
+        top: 5vh;
     }
 
     head_space {
@@ -116,8 +123,12 @@ footer {
     header {
         height: 3vh;
         background:rgba(0, 0, 0, .5);
+
     }
 
+    div > nav > div > a{
+        font-size: 3em;
+    }
 
     .shades{
         background:rgba(0, 0, 0, 1);
@@ -173,8 +184,8 @@ footer {
         justify-content: center;
         align-content: center;
         align-items: center;
-        width: 50px;
-        height: 50px;
+        width: calc(2vh + 50px);
+        height: calc(2vh + 50px);
         margin: 0px 5px 0px 0px;
         border-radius: 0px 10px 3px 0px;
         background:rgba(0, 0, 0, 1);
@@ -204,11 +215,12 @@ footer {
         padding: 5px 5px;
         border-radius: 5px;
         margin: 5px 3px 0px;
+        display: inline-block;
     }
 
 
     h1{
-        font-size: 2vh;
+        font-size: 3em;
     }
 
     #logo_frame {
@@ -272,21 +284,21 @@ footer {
         display: none;
     }
 
-#mobile_nav_buttons_right{
+    #mobile_nav_buttons_right{
 
-            position: absolute;
+        position: absolute;
 
-            top: 0px;
-            right: 10px;
+        top: 0px;
+        right: 10px;
 
-            display: flex;
-            justify-content: flex-end;
-            align-content: center;
-            align-items: center;
+        display: flex;
+        justify-content: flex-end;
+        align-content: center;
+        align-items: center;
 
-            width: calc(100vw - 70px);
-            height: 5vh;
-            margin: 0px 0px 0px 0px;
+        width: calc(100vw - 70px);
+        height: 5vh;
+        margin: 0px 0px 0px 0px;
 
 
     }
@@ -329,6 +341,9 @@ footer {
         font-size: 3.5vh;
     }
 
+    #nav_m{
+        display: none;
+    }
 
     #logo_frame {
         height: 5vh;
