--- a/src/main/resources/templates/c_header.html
+++ b/src/main/resources/templates/c_header.html
@@ -3,15 +3,15 @@
 
 <header th:fragment="header">
 
-    <div id="">
+        <div id="logo_view">
+                <div id="logo_frame"></div>
+                <!--<img id="head_logo" src="/img/peaklogo500w.png" alt="logo">-->
 
-    </div>
-    <div id="logo_frame"></div>
-    <!--<img id="head_logo" src="/img/peaklogo500w.png" alt="logo">-->
+                <a href="/"><h1>PEAK</h1></a>
+        </div>
 
-    <a href="/"><h1>PEAK</h1></a>
 
-    <nav th:replace="c_nav :: nav"></nav>
+        <nav th:replace="c_nav :: nav"></nav>
 
 
 </header>
